Fix style problems (especially on iOS)

--- a/src/components/DarkModeToggle/DarkModeToggleCornerWrapper.module.scss
+++ b/src/components/DarkModeToggle/DarkModeToggleCornerWrapper.module.scss
@@ -6,3 +6,8 @@
 	top: 10px;
 	right: 26px;
 }
+.toggle {
+	background-color: hsl(var(--nextui-default-300) / 0.5);
+	-webkit-backdrop-filter: blur(12px);
+	backdrop-filter: blur(12px);
+}
