--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -60,7 +60,7 @@ a:hover > span {
 	color: #0088FF;
 }
 
-section {
+.section {
 	position: relative;
 	margin-top: 70px;
 	&:first-of-type {
